--- a/README.rdoc
+++ b/README.rdoc
@@ -34,7 +34,21 @@ Sections below that:
 == Tasks
 
 === ToDo
-* on apps show page - sho latest deployment stats (as above in reqts).  show deployment page and give the stats we want -- adding model methods.
+* on app show page - show latest deployment stats
+** requests / second
+** small graph (or txt for now) - just slice on : and take the first one as the 'grouping'
+*** % in DB
+*** % in models
+*** % in browser
+*** % in the views
+*** % in controllers
+*** Showing this deploy and previous N deploys?
+** Trending value (how much faster / slower is this deploy than before?)
+** Number of exceptions
+** variance of all the requests (as a whole how wiggly are your times?)
+** APDEX score
+
+
 * refactor into access_token authorized request (returns true or raises the error)
 * show alerts from the deployment
 * allow hook for deployments to POST and create new deployments
