--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,6 @@
 
 We give you insight into your code, what makes it slow, how it is faring, etc. over time / deploys.
 
-
 == Displaying
 On index page, you view the 'latest' deploy.
 
@@ -34,11 +33,8 @@ Sections below that:
 == Tasks
 
 === ToDo
-* add start time to events
-
 * on app show page - show latest deployment stats
-** requests / second
-** small graph (or txt for now) - just slice on : and take the first one as the 'grouping'
+** small graph (or txt for now) - just slice action names on / and take the first one as the 'grouping'
 *** % in DB
 *** % in models
 *** % in browser
@@ -66,6 +62,8 @@ Sections below that:
 * truestack twitter ? chris?
 
 === Done
+** requests / second on deployment page
+* add start time to events
 * twitter-bootstrap styles installed.
 * add initial index action for deployments  - you can see this on /apps
 * webhook does same as websocket.
